--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -25,3 +25,16 @@
   transform: translate(-50%, -50%);
   opacity: 0.5;
 }
+/* ---------- media query ---------- */
+@media (max-width: 800px) {
+  .about {
+    flex-direction: column;
+  }
+  .about-left {
+    flex-basis: 100%;
+    margin: 20px;
+  }
+  .about-right {
+    flex-basis: 100%;
+  }
+}
