--- a/src/Components/VideoPlayer/VideoPlayer.css
+++ b/src/Components/VideoPlayer/VideoPlayer.css
@@ -5,12 +5,12 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.9);
-  z-index: 0;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.video-player-video {
+.video-player video {
   width: 90%;
   max-width: 900px;
   height: auto;
